src/objects/ints__EfxReport__c.object
<CustomObject>
    <fields>
        <fullName>ints__BureauCode__c</fullName>
        <label>BureauCode</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__BureauContactInformation__c</fullName>
        <label>BureauContactInformation</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Equifax_Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateOfDeath__c</fullName>
        <label>DateOfDeath</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateOfLastActivity__c</fullName>
        <label>DateOfLastActivity</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__FileSinceDate__c</fullName>
        <label>FileSinceDate</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__FirstName__c</fullName>
        <label>FirstName</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__HitStrengthIndicator_Code__c</fullName>
        <label>HitStrengthIndicator Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__HitStrengthIndicator_Description__c</fullName>
        <label>HitStrengthIndicator Description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Hit_Code__c</fullName>
        <label>Hit Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Hit_Description__c</fullName>
        <label>Hit Description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__LastName__c</fullName>
        <label>LastName</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__UniqueNumber__c</fullName>
        <label>UniqueNumber</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport</label>
    <listViews>
        <fullName>ints__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EFX-{0000000000}</displayFormat>
        <label>Equifax Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>